Fixed UI Bug of Challenge Card clipping

--- a/frontEnd/src/css/main.css
+++ b/frontEnd/src/css/main.css
@@ -124,14 +124,22 @@ h4 {
 .collapsing {
   position: relative;
   height: 0;
+  /* padding: 0; */
   overflow: hidden;
   -webkit-transition-property: height, visibility;
   transition-property: height, visibility;
-  -webkit-transition-duration: 0.25s;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.35s;
+  transition-duration: 0.35s;
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
 }
+/* .collapsing * {
+  visibility: hidden;
+} */
+/* 
+.collapse.in {
+  height: 1000px !important;
+} */
 
 body {
   /* background-image: url(../images/bg.png); */
@@ -745,7 +753,7 @@ input[type="radio"].toggle:checked + label {
 
 #preloader {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 
